syntax = "proto3";
package samples;

message OptionalTypesArrayEnums {
  enum SomeEnum {
    FLAT             = 0;
    NESTED_OBJECT    = 1;
    NESTED_MESSAGE   = 2;
    ARRAY_OF_TYPE    = 3;
    ARRAY_OF_OBJECT  = 4;
    ARRAY_OF_MESSAGE = 5;
  }

  SomeEnum required_some_enum = 1;
  optional SomeEnum opt_some_enum = 2;
}



